Ensure that background color always covers page

--- a/style.css
+++ b/style.css
@@ -9,14 +9,6 @@
   margin-right: 10px;
 }
 
-.fullscreen {
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  overflow: auto;
-}
-
 .deemphasize {
   opacity: .3 !important;
 }
